--- a/client/index.html
+++ b/client/index.html
@@ -36,15 +36,15 @@
     />
 
     <!--- NOTE: these are injected during build from src/html/* --->
-    <!-- splash-screen-styles.html -->
+    <!-- splash-screen-styles -->
   </head>
 
   <body>
     <div id="app"></div>
 
     <!--- NOTE: these are injected during build from src/html/* --->
-    <!-- initial-theme.html -->
-    <!-- splash-screen.html -->
+    <!-- initial-theme -->
+    <!-- splash-screen -->
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
