--- a/client/plugins/html-fragments-plugin/initial-theme.html
+++ b/client/plugins/html-fragments-plugin/initial-theme.html
@@ -34,7 +34,7 @@
     root.style.setProperty('color-scheme', initialTheme);
     root.style.setProperty(
       '--background-color',
-      initialTheme === 'light' ? '#FFFFFF' : '#111111'
+      initialTheme === 'light' ? '#F3F4F6' : '#111111'
     );
   })();
 </script>
