--- a/client/index.html
+++ b/client/index.html
@@ -35,14 +35,15 @@
       rel="stylesheet"
     />
 
-    <!--- NOTE: these are injected during build from src/html/* --->
+    <!--- NOTE: these are injected during build from plugins/html-fragments-plugin --->
+    <!-- icon-sprite.html -->
     <!-- splash-screen-styles -->
   </head>
 
   <body>
     <div id="app"></div>
 
-    <!--- NOTE: these are injected during build from src/html/* --->
+    <!--- NOTE: these are injected during build from plugins/html-fragments-plugin --->
     <!-- initial-theme -->
     <!-- splash-screen -->
 
