--- a/client/plugins/html-fragments-plugin/initial-theme.html
+++ b/client/plugins/html-fragments-plugin/initial-theme.html
@@ -32,6 +32,7 @@
     const root = document.documentElement;
 
     root.style.setProperty('color-scheme', initialTheme);
+    root.setAttribute('data-color-scheme', initialTheme);
     root.style.setProperty(
       '--background-color',
       initialTheme === 'light' ? '#F3F4F6' : '#111111'
