--- a/client/.storybook/preview-head.html
+++ b/client/.storybook/preview-head.html
@@ -1,5 +1,5 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
   rel="stylesheet"
 />
